; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_rev-parse.c_show.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_rev-parse.c_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@output_sq = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [4 x i8] c"'\\'\00", align 1
@stdout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i64, i64* @output_sq, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %33

7:                                                ; preds = %1
  store i32 39, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = trunc i32 %8 to i8
  %10 = call i32 @putchar(i8 signext %9)
  br label %11

11:                                               ; preds = %24, %7
  %12 = load i8*, i8** %2, align 8
  %13 = getelementptr inbounds i8, i8* %12, i32 1
  store i8* %13, i8** %2, align 8
  %14 = load i8, i8* %12, align 1
  %15 = sext i8 %14 to i32
  store i32 %15, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %28

17:                                               ; preds = %11
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %3, align 4
  %20 = icmp eq i32 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %17
  %22 = load i32, i32* @stdout, align 4
  %23 = call i32 @fputs(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %22)
  br label %24

24:                                               ; preds = %21, %17
  %25 = load i32, i32* %4, align 4
  %26 = trunc i32 %25 to i8
  %27 = call i32 @putchar(i8 signext %26)
  br label %11

28:                                               ; preds = %11
  %29 = load i32, i32* %3, align 4
  %30 = trunc i32 %29 to i8
  %31 = call i32 @putchar(i8 signext %30)
  %32 = call i32 @putchar(i8 signext 32)
  br label %36

33:                                               ; preds = %1
  %34 = load i8*, i8** %2, align 8
  %35 = call i32 @puts(i8* %34)
  br label %36

36:                                               ; preds = %33, %28
  ret void
}

declare dso_local i32 @putchar(i8 signext) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @puts(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
